# Code-Agent

./: .gitignore  .secrets_template.toml  README.md  pyproject.toml  reinstall.sh
code_agent/: __init__.py  cli.py  commit_maker.py  config.py  definitions.py
code_agent/agents/: __init__.py  code_audit.py  code_refactorer.py  commit_maker.py
code_agent/git_utils/: __init__.py
code_agent/output_schemas/: AuditReport.py  CodeSuggestions.py  CommitMessage.py  __init__.py
code_agent/settings/: code_audit_config.toml  code_refactorer_config.toml  commit_maker_config.toml
code_agent/utils/: __init__.py  read_text.py
code_agent/utils/git/: __init__.py  git_local.py
tests/inputs/: file1.rs  wc_command.rs
