[tool.poetry]
name = "code-agent"
version = "0.1.3.2"
description = "🦾 🤖 ChatGPT-based Agent tool for support your software development."
authors = ["Shingo Morimoto <gonsix3@gmail.com>"]
repository = "https://github.com/Gonsix/Code-Agent"
readme = "README.md"
license = "MIT"
keywords = ["ChatGPT", "LangChain", "LLM", "AI-Tool", "Git"]

maintainers = [
    "Shingo Morimoto <gonsix3@gmail.com>",
]

[tool.poetry.dependencies]
python = ">=3.9,<4.0"
openai = "^1.13.3"
langchain = "^0.1.9"
langchain-openai = "^0.0.8"
langchain-community = "^0.0.24"
gitpython = "^3.1.42"
python-dotenv = "^1.0.1"
typer = {extras = ["all"], version = "^0.9.0"}

[tool.poetry.scripts]
codex = 'code_agent.cli:main'

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
